# codespan

./: Cargo.toml
codespan/: Cargo.toml
codespan-lsp/: Cargo.toml
codespan-reporting/: Cargo.toml
codespan-reporting/examples/: custom_files.rs  peg_calculator.rs  readme_preview.rs  reusable_diagnostic.rs  term.rs
codespan-reporting/src/: files.rs  term.rs
codespan-reporting/src/term/: config.rs  renderer.rs  views.rs
codespan-reporting/tests/: term.rs
codespan-reporting/tests/support/: color_buffer.rs  mod.rs
