[package]
name = "codespan-lsp"
version = "0.11.1"
license = "Apache-2.0"
authors = [ "Markus Westerlind <marwes91@gmail.com>",]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-lsp"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
lsp-types = "0.97.0"
url = "2.5.4"

[dependencies.codespan-reporting]
version = "0.12.0"
path = "../codespan-reporting"
features = [ "std", "termcolor",]

[lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
