[package]
name = "codespan"
version = "0.12.0"
readme = "README.md"
license = "Apache-2.0"
authors = [ "Brendan Zabarauskas <bjzaba@yahoo.com.au>",]
description = "Data structures for tracking locations in source code"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan"
edition = "2024"
rust-version = "1.85.0"

[features]
default = [ "std", "termcolor",]
std = [ "codespan-reporting/std", "serde?/std",]
termcolor = [ "std", "codespan-reporting/termcolor",]
serialization = [ "serde", "codespan-reporting/serialization",]

[dependencies.codespan-reporting]
path = "../codespan-reporting"
version = "0.12.0"
default-features = false

[dependencies.serde]
version = "1.0.221"
default-features = false
optional = true
features = [ "derive", "alloc",]

[dev-dependencies.termcolor]
path = "../../../forks/termcolor"

[lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
